hoping that I fixed the footer spacing.

--- a/styleSheet.css
+++ b/styleSheet.css
@@ -109,6 +109,7 @@ footer{
     color: whitesmoke;
     position: relative;
     padding-left: 1%;
+    padding-top: 0%;
     height: 30px;
 }
 
@@ -159,7 +160,7 @@ footer{
         background-color: #F4FA58;
     }
     
-    a.first, a.second, a.third, a.fourth, a.fifth,  {
+    a.first, a.second, a.third, a.fourth, a.fifth{
         width:80%;
     }
     
